Edit basic HTML tags to describe sandbox nature of practice project

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Page Title</title>
+    <title>Practice Sandbox</title>
   </head>
   <body>
 
-    <h1>My First Website</h1>
-    <p>My first paragraph.</p>
+    <h1>Practice Sandbox</h1>
+    <p>A basic sandbox website for testing out bits and pieces</p>
 
   </body>
 </html>
