Sandbox holds profile information about a YouTuber called PoloDeDog

--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Practice Sandbox</title>
+    <title>Polo De Gamer</title>
   </head>
   <body>
 
-    <h1>Practice Sandbox</h1>
-    <p>A basic sandbox website for testing out bits and pieces</p>
+    <h1>Polo De Gamer</h1>
+
+    <h2>Intro</h2>
+
+    <img src="https://pixabay.com/get/53e7d5414257af14f1dc8460da29317e1136d8e3515073_640.png" alt="Polo De Dog is a content creator who makes gatcha animations and predominantly uses the YouTube platform to host the videos he creates." />
+
+    <p>Polo De Gamer, has been creating content for over two years. He started out creating animations in Scratch, and then progressed to creating content for YouTube. He loves playing online videogames with his friends and hopes to stream live footage of the games he enjoys in the near future.</p>
+
+    <h3>Favourite Games</h3>
+
+    <ul>
+      <li><a href="https://www.roblox.com/">Roblox</a></li>
+      <li>Minecraft</li>
+      <li>The Legend of Zelda</li>
+      <li>Pokemon</li>
+      <li>World of Warcraft</li>
+    </ul>
+
+    <h3>Other interests</h3>
+
+    <ul>
+      <li>Reading and drawing manga</li>
+      <li>Creepy pastas</li>
+      <li>Cosplay</li>
+    </ul>
 
   </body>
 </html>
