Give image an ID to enable selective styling of this single element

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <h2>Intro</h2>
 
-    <img src="https://pixabay.com/get/53e7d5414257af14f1dc8460da29317e1136d8e3515073_640.png" alt="Polo De Dog is a content creator who makes gatcha animations and predominantly uses the YouTube platform to host the videos he creates." />
+    <img id="yt-icon" src="https://pixabay.com/get/53e7d5414257af14f1dc8460da29317e1136d8e3515073_640.png" alt="Polo De Dog is a content creator who makes gatcha animations and predominantly uses the YouTube platform to host the videos he creates." />
 
     <p>Polo De Gamer, has been creating content for over two years. He started out creating animations in Scratch, and then progressed to creating content for YouTube. He loves playing online videogames with his friends and hopes to stream live footage of the games he enjoys in the near future.</p>
 
